# riff-diff

./: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  riff-diff-claude-code-plan.md  vite.config.ts
.claude/: settings.local.json
.claude/memory/: MEMORY.md
assets/: rd-icon.af  site.webmanifest
src/: App.tsx  forceStaveVisibility.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: DiffFilterBar.test.tsx  DiffFilterBar.tsx  DiffMinimap.test.tsx  DiffMinimap.tsx  LoadingOverlay.test.tsx  LoadingOverlay.tsx  MetadataOverlay.test.tsx  MetadataOverlay.tsx  SplitPane.tsx  TrackToolbar.tsx
src/diff/: diffEngine.ts  metadata.test.ts  metadata.ts  phantomBars.test.ts  phantomBars.ts  types.ts
src/hooks/: useDropZone.test.ts  useDropZone.ts  useFileLoader.test.ts  useFileLoader.ts  useNotationToggle.ts  useSyncScroll.test.ts  useSyncScroll.ts  useZoom.test.ts  useZoom.ts
src/renderer/: AlphaTabPane.test.tsx  AlphaTabPane.tsx  DiffOverlay.test.tsx  DiffOverlay.tsx
